Added all pipeline for forgot password and reset password routes
